--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "start:firefox": "web-ext run --source-dir ./dist/"
   },
   "dependencies": {
+    "@tiptap/pm": "^2.0.2",
+    "@tiptap/starter-kit": "^2.0.2",
+    "@tiptap/vue-3": "^2.0.2",
     "firebase": "^9.18.0",
     "vue": "^3.0.5"
   },
