--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Collaborative Browser Extension",
-  "version": "0.1.0",
+  "version": "0.1.7",
   "manifest_version": 3,
   "content_scripts": [
     {
@@ -17,16 +17,18 @@
     "service_worker": "background.js"
   },
   "icons": {
-    "32": "assets/obsidian32.png",
-    "48": "assets/obsidian48.png",
-    "128": "assets/obsidian128.png",
-    "512": "assets/obsidian512.png"
+    "16": "assets/16x16.png",
+    "48": "assets/48x48.png",
+    "128": "assets/128x128.png",
+    "512": "assets/512x512.png"
   },
   "action": {
     "default_icon": {
-      "32": "assets/obsidian32.png",
-      "48": "assets/obsidian48.png",
-      "128": "assets/obsidian128.png"
+      "16": "assets/16x16.png",
+      "32": "assets/32x32.png",
+      "48": "assets/48x48.png",
+      "128": "assets/128x128.png",
+      "512": "assets/512x512.png"
     },
     "default_title": "Open Collab Extension",
     "default_popup": "popup/popup.html",
