--- a/package.json
+++ b/package.json
@@ -2,28 +2,28 @@
   "name": "collab-extension",
   "version": "0.1.0",
   "scripts": {
-    "dev": "vite build --mode development",
+    "dev": "vite build --watch --mode development",
     "build": "vite build",
     "preview": "vite preview",
     "start:firefox": "web-ext run --source-dir ./dist/"
   },
   "dependencies": {
-    "@tiptap/pm": "^2.0.2",
-    "@tiptap/starter-kit": "^2.0.2",
-    "@tiptap/vue-3": "^2.0.2",
-    "firebase": "^9.18.0",
-    "vue": "^3.0.5",
+    "@tiptap/pm": "^2.1.11",
+    "@tiptap/starter-kit": "^2.1.11",
+    "@tiptap/vue-3": "^2.1.11",
+    "firebase": "^9.23.0",
+    "vue": "^3.3.4",
     "vue-icomoon": "^0.6.1"
   },
   "devDependencies": {
     "@asigloo/prettier-config": "^0.2.0",
-    "@iconify/json": "^1.1.387",
-    "@vitejs/plugin-vue": "^1.3.0",
-    "@vue/compiler-sfc": "^3.0.5",
-    "autoprefixer": "^10.3.1",
-    "vite": "^2.4.4",
+    "@iconify/json": "^1.1.461",
+    "@vitejs/plugin-vue": "^1.10.2",
+    "@vue/compiler-sfc": "^3.3.4",
+    "autoprefixer": "^10.4.16",
+    "vite": "^2.9.16",
     "vite-plugin-chrome-extension": "^0.0.7",
-    "vite-plugin-components": "^0.13.2",
+    "vite-plugin-components": "^0.13.3",
     "vite-plugin-icons": "^0.6.5",
     "vite-require": "^0.2.3",
     "webextension-polyfill": "^0.10.0"
