--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue": "^1.10.2",
     "@vue/compiler-sfc": "^3.3.4",
     "autoprefixer": "^10.4.16",
+    "sass": "^1.68.0",
     "vite": "^2.9.16",
     "vite-plugin-chrome-extension": "^0.0.7",
     "vite-plugin-components": "^0.13.3",
